crates/board-tui/tests/snapshots/snapshots__reorder_card_mini_mode.snap
---
source: crates/board-tui/tests/snapshots.rs
expression: in_mode
---
" ◈ herdr-board ● 1 running          [ Global ▾ ]                   [ main ▾ ]            [ Active ] [ All ] [ Archived ]"
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌ TODO · MANUAL · 1 ─────────┐┌ PLAN · AUTO · 1 ───────────┐┌ EXECUTE · AUTO · 2 ────────┐┌ REVIEW · AUTO · 2 ─────────┐"
"│┌──────────────────────────┐││┌──────────────────────[▶]─┐││┌──────────────────────────┐││┌──────────────────────[▶]─┐│"
"││#1 Update docs            ││││#2 Add retry to MELI scra…││││#3 Fix flaky test         ││││#6 Tune retry backoff     ││"
"││· idle                    ││││▶ running · 2m0s          ││││⧗ queued                  ││││? awaiting                ││"
"││claude                    ││││claude · eff: high        ││││claude                    ││││claude                    ││"
"│└──────────────────────────┘││└──────────────────────────┘││└──────────────────────────┘││└──────────────────────────┘│"
"│                            ││                            ││┌──────────────────────[▶]─┐││┌──────────────────────[▶]─┐│"
"│                            ││                            │││#4 Investigate crash      ││││#5 Refactor auth module   ││"
"│                            ││                            │││⏸ blocked                 ││││✗ failed                  ││"
"│                            ││                            │││claude                    ││││claude · eff: medium      ││"
"│                            ││                            ││└──────────────────────────┘││└──────────────────────────┘│"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││┌ Reorder card ────────────────────────────────────[ X ]─┐││                            │"
"│                            │││ [ ↑ ]       reorder Refactor auth module       [ ↓ ]   │││                            │"
"│                            │││                                                        │││                            │"
"│                            │││        [ Confirm ]                  [ Cancel ]         │││                            │"
"│                            ││└────────────────────────────────────────────────────────┘││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"│                            ││                            ││                            ││                            │"
"└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘└────────────────────────────┘"
" [ + Card ]  [ Open card ]  [ Archive ] [ + Column ]  [ Edit col ]  [ Del col ] [ Move col ]  [ Template ]  [ ? Help ]  "
